[project]
name = "momentum-chatbot"
version = "0.1.0"
description = "챗봇 기반 RAG 프로젝트"
authors = [
    {name = "splguyjr", email = "splguyjr@naver.com"}
]

# Python 버전 범위를 명시적으로 제한
requires-python = ">=3.10,<4.0"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "langchain-ollama",
    "faiss-cpu",
    "sentence-transformers",
    "PyMuPDF",
    "langchain-teddynote==0.3.44",
    "langchain-openai (>=0.3.27,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"